# wachy

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  LICENSE.md  NOTICE.md  README.md  index.html  release.sh  tailwind.css
demo/: Makefile  demo.cpp
docs/: guide.md  internals.md
src/: bpftrace_compiler.rs  constants.rs  controller.rs  error.rs  events.rs  main.rs  program.rs  search.rs  trace_structs.rs  tracer.rs  views.rs
