[package]
name = "wachy"
version = "0.1.0-alpha.3"
authors = ["Vivek Jain <vivek.jain@rubrik.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = { path = "../addr2line" }
backtrace = "0.3.50"
clap = { version = "2.33.3", default-features = false }
cplus_demangle = "0.1.1"
crc32fast = "1.2.1"
cursive = "0.15.0"
cursive_table_view = { path = "../cursive_table_view" }
fuzzy-matcher = "0.3.5"
gimli = "0.23"
itertools = "0.9.0"
lazy_static = "1.4.0"
libc = "0.2.77"
log = "0.4.11"
memmap = "0.7.0"
object = { path = "../object" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
simple-logging = { path = "../simple-logging" }
unwrap = "1.2.1"
zydis = "3.1.1"

[profile.release]
# Helps reduce binary size
lto = true
