[package]
name = "wachy"
version = "0.1.0-alpha.6"
authors = ["Vivek Jain <vivek.jain@rubrik.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A dynamic tracing profiler for Linux"

[dependencies]
addr2line = "0.17.0"
backtrace = "0.3.63"
clap = { version = "2.33.3", default-features = false }
cplus_demangle = "0.1.1"
crc32fast = "1.2.1"
cursive = "0.17.0"
cursive_table_view = "0.14.0"
flexi_logger = { version = "0.20.0", default_features = false }
fuzzy-matcher = "0.3.7"
gimli = "0.26.1"
itertools = "0.10.1"
lazy_static = "1.4.0"
libc = "0.2.107"
log = "0.4.14"
memmap2 = "0.5.0"
object = "0.27.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
unwrap = "1.2.1"
zydis = "3.1.2"

[profile.release]
# Helps reduce binary size
lto = true

[package.metadata.deb]
depends = "$auto, bpftrace, libgcc1"
